force-app/main/default/objects/Visit_Log__c/Visit_Log__c.object-meta.xml
<CustomObject>
    <label>Visit Log</label>
    <nameField>
        <displayFormat>VIS-{YYYY}-{0000}</displayFormat>
        <label>Visit_Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>