force-app/main/default/objects/Visit_Log__c/fields/Collection_Verified__c.field-meta.xml
<CustomField>
    <fullName>Collection_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collection_Verified</label>
    <type>Checkbox</type>
</CustomField>