force-app/main/default/objects/Visit_Log__c/fields/Geo_Lat__c.field-meta.xml
<CustomField>
    <fullName>Geo_Lat__c</fullName>
    <label>Geo_Lat</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>