force-app/main/default/objects/Visit_Log__c/fields/Geo_Long__c.field-meta.xml
<CustomField>
    <fullName>Geo_Long__c</fullName>
    <label>Geo_Long</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>