force-app/main/default/objects/Visit_Log__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Route followed.</description>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Visit Logs</relationshipLabel>
    <relationshipName>Visit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>