force-app/main/default/objects/Visit_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>When the pickup happened.</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>