force-app/main/default/objects/Visit_Log__c/fields/Visit_Location__c.field-meta.xml
<CustomField>
    <fullName>Visit_Location__c</fullName>
    <description>Latitude and Longitude of the visit location (for mapping/tracking).</description>
    <label>Visit_Location</label>
    <required>true</required>
    <scale>6</scale>
    <type>Location</type>
</CustomField>