force-app/main/default/objects/Visit_Log__c/validationRules/Driver_CanOnlyLogOwnVehicle.validationRule-meta.xml
<ValidationRule>
    <fullName>Driver_CanOnlyLogOwnVehicle</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Vehicle__c)) &amp;&amp; Vehicle__r.Driver__c &lt;&gt; $User.Id</errorConditionFormula>
    <errorMessage>You can only create visit logs for the vehicle assigned to you.</errorMessage>
</ValidationRule>