force-app/main/default/objects/Visit_Log__c/validationRules/Require_GPS.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_GPS</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Geo_Lat__c) || ISBLANK(Geo_Long__c)</errorConditionFormula>
    <errorMessage>Please provide GPS coordinates (latitude &amp; longitude) before saving.</errorMessage>
</ValidationRule>