force-app/main/default/objects/Visit_Log__c/validationRules/Validate_VisitTimestamp.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_VisitTimestamp</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Timestamp__c) || Timestamp__c &lt; NOW()</errorConditionFormula>
    <errorDisplayField>Timestamp__c</errorDisplayField>
    <errorMessage>Visit Timestamp is required and cannot be in the past.</errorMessage>
</ValidationRule>