force-app/main/default/objects/Visit_Log__c/validationRules/Validate_VisitZone.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_VisitZone</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Zone__c )</errorConditionFormula>
    <errorDisplayField>Zone__c</errorDisplayField>
    <errorMessage>Please select a Zone for the Visit.</errorMessage>
</ValidationRule>